--- a/PSCIDemo/Pages/Index.cshtml
+++ b/PSCIDemo/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Github Actions example</p>
+    <p>Github Actions example. Making another change</p>
 </div>
 
